--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "^0.1.1",
+    "@react-email/render": "^1.1.3",
     "@tanstack/react-form": "^1.13.2",
     "@uploadthing/react": "^7.3.2",
     "class-variance-authority": "^0.7.1",
@@ -45,6 +47,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
+    "resend": "^4.6.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.3",
