--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.522.0",
     "motion": "^12.23.0",
-    "next": "15.3.4",
+    "next": "^15.3.5",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-day-picker": "^9.7.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
     "resend": "^4.6.0",
     "sonner": "^2.0.5",
