--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.522.0",
     "motion": "^12.23.0",
-    "next": "^15.3.5",
+    "next": "^15.4.4",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-day-picker": "^9.7.0",
@@ -61,13 +61,20 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
     "prisma": "^6.11.1",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.0",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
