--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-	"buildCommand": "npx prisma generate && npm run build",
+	"buildCommand": "npx prisma generate && npm run test:coverage && npm run lint && npm run build",
 	"outputDirectory": ".next",
 	"devCommand": "npm run dev",
 	"installCommand": "npm ci",
