--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@radix-ui/react-tooltip": "^1.2.7",
 		"@react-email/components": "^0.1.1",
 		"@react-email/render": "^1.1.3",
+		"@sentry/nextjs": "^10.0.0",
 		"@tanstack/react-form": "^1.13.2",
 		"@uploadthing/react": "^7.3.2",
 		"better-auth": "^1.2.12",
